Using GCP_PROJECT_ID over GCP_PROJECT, since that seems to be the norm

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,5 +46,5 @@ jobs:
 
     - name: Run tests
       env:
-        GCP_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
       run: go test -v ./...
